cmake_minimum_required(VERSION 3.26)
project(com_122)

set(CMAKE_CXX_STANDARD 17)


# lab 03
add_executable(lab03-p01 lab03/p01.cpp)
add_executable(lab03-p02 lab03/p02.cpp)
add_executable(lab03-p03 lab03/p03.cpp)
add_executable(lab03-p04 lab03/p04.cpp)
add_executable(lab03-p05 lab03/p05.cpp)
add_executable(lab03-p06 lab03/p06.cpp)
add_executable(lab03-p07 lab03/p07.cpp)
add_executable(lab03-p08 lab03/p08.cpp)
add_executable(lab03-p09 lab03/p09.cpp)
add_executable(lab03-p10 lab03/p10.cpp)

# lab 02
add_executable(lab02-p01 lab02/p01.cpp)
add_executable(lab02-p02 lab02/p02.cpp)
add_executable(lab02-p03 lab02/p03.cpp)
add_executable(lab02-p04 lab02/p04.cpp)
add_executable(lab02-p05 lab02/p05.cpp)
add_executable(lab02-p06 lab02/p06.cpp)
add_executable(lab02-p07 lab02/p07.cpp)
add_executable(lab02-p08 lab02/p08.cpp)
add_executable(lab02-p09 lab02/p09.cpp)
add_executable(lab02-p10 lab02/p10.cpp)

# lab 01
add_executable(lab01-p01 lab01/p02.cpp)
add_executable(lab01-p02 lab01/p02.cpp)
add_executable(lab01-p03 lab01/p03.cpp)
add_executable(lab01-p04 lab01/p04.cpp)
add_executable(lab01-p05 lab01/p05.cpp)
add_executable(lab01-p06 lab01/p06.cpp)
add_executable(lab01-p07 lab01/p07.cpp)
add_executable(lab01-p08 lab01/p08.cpp)
add_executable(lab01-p09 lab01/p09.cpp)
add_executable(lab01-p10 lab01/p10.cpp)



# becrowd problems
add_executable(p1000 ojmid/p1000.cpp)
add_executable(p1001 ojmid/p1001.cpp)
add_executable(p1002 ojmid/p1002.cpp)
add_executable(p1003 ojmid/p1003.cpp)
add_executable(p1004 ojmid/p1004.cpp)
add_executable(p1005 ojmid/p1005.cpp)
add_executable(p1006 ojmid/p1006.cpp)
add_executable(p1007 ojmid/p1007.cpp)
add_executable(p1008 ojmid/p1008.cpp)
add_executable(p1009 ojmid/p1009.cpp)
add_executable(p1010 ojmid/p1010.cpp)
add_executable(p1011 ojmid/p1011.cpp)
add_executable(p1012 ojmid/p1012.cpp)
add_executable(p1013 ojmid/p1013.cpp)
add_executable(p1014 ojmid/p1014.cpp)
add_executable(p1015 ojmid/p1015.cpp)
add_executable(p1016 ojmid/p1016.cpp)
add_executable(p1017 ojmid/p1017.cpp)
add_executable(p1018 ojmid/p1018.cpp)
add_executable(p1019 ojmid/p1019.cpp)
add_executable(p1020 ojmid/p1020.cpp)
add_executable(p1021 ojmid/p1021.cpp)
add_executable(p1035 ojmid/p1035.cpp)
add_executable(p1036 ojmid/p1036.cpp)
add_executable(p1037 ojmid/p1037.cpp)
add_executable(p1038 ojmid/p1038.cpp)
add_executable(p1040 ojmid/p1040.cpp)
add_executable(p1041 ojmid/p1041.cpp)
add_executable(p1042 ojmid/p1042.cpp)
add_executable(p1043 ojmid/p1043.cpp)
add_executable(p1044 ojmid/p1044.cpp)
add_executable(p1045 ojmid/p1045.cpp)
add_executable(p1046 ojmid/p1046.cpp)

# lab 04
add_executable(lab04-01 lab04/p01.cpp)
add_executable(lab04-02 lab04/p02.cpp)
add_executable(lab04-03 lab04/p03.cpp)
add_executable(lab04-04 lab04/p04.cpp)
add_executable(lab04-05 lab04/p05.cpp)
add_executable(lab04-06 lab04/p06.cpp)
add_executable(lab04-07 lab04/p07.cpp)
add_executable(lab04-08 lab04/p08.cpp)
add_executable(lab04-09 lab04/p09.cpp)
add_executable(lab04-10 lab04/p10.cpp)

# lab 05
add_executable(lab05-01 lab05/p01.cpp)
add_executable(lab05-02 lab05/p02.cpp)
